adição de um dorama

--- a/Doramas/doramas.html
+++ b/Doramas/doramas.html
@@ -215,6 +215,13 @@
             </div>
             
             <div class="doramas">
+                <a href="https://www.adorocinema.com/series/serie-35282/">
+                    <img src="../IMG/IMG-Doramas/strong-girl-nam-soon.jpg" width="200px" height="300px" alt="Strong Girl Nam-Soon">
+                    <h2>Strong Girl Nam-Soon</h2>
+                </a>
+            </div>
+            
+            <div class="doramas">
                 <a href="https://www.adorocinema.com/series/serie-33764/">
                     <img src="../IMG/IMG-Doramas/intensivo-no-amor.jpg" width="200px" height="300px" alt="Intensivo de Amor">
                     <h2>Intensivo de Amor</h2>
